syntax = "proto3";

option csharp_namespace = "Travely.PropertyManager.GrpcService.Contracts";

service PropertyType {
	rpc AddPropertyType(AddPropertyTypeRequest) returns (AddPropertyTypeResponse);

	rpc GetPropertyTypeById(GetPropertyTypeByIdRequest) returns (GetPropertyTypeResponse);

	rpc GetPropertyTypes(GetPropertyTypesRequest) returns (stream GetPropertyTypeResponse);
}

message AddPropertyTypeRequest {
	string name = 1;
}

message AddPropertyTypeResponse {
	
}


message GetPropertyTypeByIdRequest {
	int32 id = 1;
}

message GetPropertyTypeResponse {
	int32 id = 1;
	string name = 2;
}

message GetPropertyTypesRequest {

}


